--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1030,6 +1030,10 @@ select {
   margin-top: 0.75rem;
   margin-bottom: 0.75rem;
 }
+.my-2 {
+  margin-top: 0.5rem;
+  margin-bottom: 0.5rem;
+}
 .ml-3 {
   margin-left: 0.75rem;
 }
@@ -1138,9 +1142,6 @@ select {
 .ml-8 {
   margin-left: 2rem;
 }
-.mr-8 {
-  margin-right: 2rem;
-}
 .mb-8 {
   margin-bottom: 2rem;
 }
@@ -1195,17 +1196,14 @@ select {
 .h-2 {
   height: 0.5rem;
 }
-.h-\[36px\] {
-  height: 36px;
+.h-full {
+  height: 100%;
 }
 .h-32 {
   height: 8rem;
 }
-.h-auto {
-  height: auto;
-}
-.h-full {
-  height: 100%;
+.h-\[36px\] {
+  height: 36px;
 }
 .min-h-screen {
   min-height: 100vh;
@@ -1379,9 +1377,6 @@ select {
 .flex-wrap {
   flex-wrap: wrap;
 }
-.content-center {
-  align-content: center;
-}
 .items-start {
   align-items: flex-start;
 }
@@ -1532,10 +1527,6 @@ select {
   --tw-border-opacity: 1;
   border-color: rgb(156 163 175 / var(--tw-border-opacity));
 }
-.border-blue-600 {
-  --tw-border-opacity: 1;
-  border-color: rgb(37 99 235 / var(--tw-border-opacity));
-}
 .border-gray-500 {
   --tw-border-opacity: 1;
   border-color: rgb(107 114 128 / var(--tw-border-opacity));
@@ -1596,6 +1587,9 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
+.bg-white\/30 {
+  background-color: rgb(255 255 255 / 0.3);
+}
 .bg-blue-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(59 130 246 / var(--tw-bg-opacity));
@@ -1608,17 +1602,18 @@ select {
   --tw-bg-opacity: 1;
   background-color: rgb(22 163 74 / var(--tw-bg-opacity));
 }
-.bg-white\/30 {
-  background-color: rgb(255 255 255 / 0.3);
+.bg-red-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
   --tw-bg-opacity: 0.25;
 }
-.bg-ilustrasi {
-  background-image: url('/img/ilustrasi-tall-stack.png');
-}
 .bg-nama {
   background-image: url('/img/nama.png');
+}
+.bg-ilustrasi {
+  background-image: url('/img/ilustrasi-tall-stack.png');
 }
 .bg-cover {
   background-size: cover;
@@ -1755,6 +1750,9 @@ select {
 .pt-8 {
   padding-top: 2rem;
 }
+.pt-24 {
+  padding-top: 6rem;
+}
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1764,14 +1762,8 @@ select {
 .pl-0 {
   padding-left: 0px;
 }
-.pt-24 {
-  padding-top: 6rem;
-}
 .pr-3 {
   padding-right: 0.75rem;
-}
-.pl-4 {
-  padding-left: 1rem;
 }
 .text-left {
   text-align: left;
@@ -2054,9 +2046,6 @@ select {
 .hover\:rounded-md:hover {
   border-radius: 0.375rem;
 }
-.hover\:border:hover {
-  border-width: 1px;
-}
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2254,11 +2243,6 @@ select {
     background-color: rgb(17 24 39 / var(--tw-bg-opacity));
   }
 
-  .dark\:bg-blue-800 {
-    --tw-bg-opacity: 1;
-    background-color: rgb(30 64 175 / var(--tw-bg-opacity));
-  }
-
   .dark\:bg-gray-800 {
     --tw-bg-opacity: 1;
     background-color: rgb(31 41 55 / var(--tw-bg-opacity));
@@ -2273,17 +2257,22 @@ select {
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 
+  .dark\:bg-blue-800 {
+    --tw-bg-opacity: 1;
+    background-color: rgb(30 64 175 / var(--tw-bg-opacity));
+  }
+
   .dark\:bg-gray-200 {
     --tw-bg-opacity: 1;
     background-color: rgb(229 231 235 / var(--tw-bg-opacity));
   }
 
-  .dark\:bg-ilustrasi-dark {
-    background-image: url('/img/ilustrasi-tall-stack-dark.png');
-  }
-
   .dark\:bg-nama-white {
     background-image: url('/img/nama-white.png');
+  }
+
+  .dark\:bg-ilustrasi-dark {
+    background-image: url('/img/ilustrasi-tall-stack-dark.png');
   }
 
   .dark\:text-white {
@@ -2301,29 +2290,24 @@ select {
     color: rgb(147 197 253 / var(--tw-text-opacity));
   }
 
-  .hover\:dark\:bg-gray-600:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
-  }
-
-  .hover\:dark\:bg-gray-300:hover {
-    --tw-bg-opacity: 1;
-    background-color: rgb(209 213 219 / var(--tw-bg-opacity));
-  }
-
   .hover\:dark\:bg-gray-700:hover {
     --tw-bg-opacity: 1;
     background-color: rgb(55 65 81 / var(--tw-bg-opacity));
   }
 
-  .hover\:dark\:text-blue-200:hover {
-    --tw-text-opacity: 1;
-    color: rgb(191 219 254 / var(--tw-text-opacity));
+  .hover\:dark\:bg-gray-600:hover {
+    --tw-bg-opacity: 1;
+    background-color: rgb(75 85 99 / var(--tw-bg-opacity));
   }
 
   .dark\:hover\:text-black:hover {
     --tw-text-opacity: 1;
     color: rgb(0 0 0 / var(--tw-text-opacity));
+  }
+
+  .hover\:dark\:text-blue-200:hover {
+    --tw-text-opacity: 1;
+    color: rgb(191 219 254 / var(--tw-text-opacity));
   }
 }
 @media (min-width: 640px) {
@@ -2553,12 +2537,12 @@ select {
     height: 20rem;
   }
 
-  .md\:w-1\/2 {
-    width: 50%;
-  }
-
   .md\:w-60 {
     width: 15rem;
+  }
+
+  .md\:w-1\/2 {
+    width: 50%;
   }
 
   .md\:max-w-3xl {
@@ -2577,10 +2561,6 @@ select {
     flex-direction: row;
   }
 
-  .md\:flex-col {
-    flex-direction: column;
-  }
-
   .md\:items-center {
     align-items: center;
   }
@@ -2591,12 +2571,6 @@ select {
 
   .md\:gap-6 {
     gap: 1.5rem;
-  }
-
-  .md\:space-x-8 > :not([hidden]) ~ :not([hidden]) {
-    --tw-space-x-reverse: 0;
-    margin-right: calc(2rem * var(--tw-space-x-reverse));
-    margin-left: calc(2rem * calc(1 - var(--tw-space-x-reverse)));
   }
 
   .md\:border-t-0 {
@@ -2610,14 +2584,6 @@ select {
   .md\:py-3 {
     padding-top: 0.75rem;
     padding-bottom: 0.75rem;
-  }
-
-  .md\:pt-1 {
-    padding-top: 0.25rem;
-  }
-
-  .md\:align-middle {
-    vertical-align: middle;
   }
 }
 @media (min-width: 1024px) {
